--- a/src/app/modules/portal/pages/balances/balances.component.html
+++ b/src/app/modules/portal/pages/balances/balances.component.html
@@ -4,8 +4,8 @@
     <header class="platforms-page__header">
       <h2>Listado de plataformas</h2>
       <p>
-        Selecciona la plataforma correspondiente para añadir su saldo inicial y
-        final.
+        Haz click en la plataforma correspondiente para añadir y/o actualizar su
+        saldo inicial y final.
       </p>
     </header>
     <section class="info" *ngIf="balances.length < 1">
@@ -19,7 +19,11 @@
       <button>Iniciar Saldos</button>
     </section>
     <div class="container" *ngIf="balances.length >= 1">
-      <article class="card" *ngFor="let balance of balances">
+      <article
+        class="card"
+        *ngFor="let balance of balances"
+        (click)="openModal(balance)"
+      >
         <header>
           <h3>{{ balance.platformName }}</h3>
         </header>
@@ -36,5 +40,37 @@
       </article>
     </div>
   </section>
+  <app-modal
+    modalId="balance-modal"
+    [modalTitle]="selectedBalance?.platformName"
+  >
+    <section>
+      <form
+        [formGroup]="balanceForm"
+        class="form-spacing"
+        (ngSubmit)="onSubmit()"
+      >
+        <div>
+          <label for="initialBalance">Saldo Inicial</label>
+          <input
+            type="text"
+            id="initialBalance"
+            formControlName="initialBalance"
+          />
+          <strong *ngIf="hasError('initialBalance', 'required')"
+            >El saldo inicial es requerido</strong
+          >
+        </div>
+        <div>
+          <label for="finalBalance">Saldo Final</label>
+          <input type="text" id="finalBalance" formControlName="finalBalance" />
+          <strong *ngIf="hasError('finalBalance', 'required')"
+            >El saldo final es requerido</strong
+          >
+        </div>
+        <button type="submit">Actualizar Saldos</button>
+      </form>
+    </section>
+  </app-modal>
 </main>
-<app-loading [loading]="balancesStatus === 'loading'"></app-loading>
+<app-loading [loading]="balanceStatus === 'loading'"></app-loading>
