feat: link create balances button with api

--- a/src/app/modules/portal/pages/balances/balances.component.html
+++ b/src/app/modules/portal/pages/balances/balances.component.html
@@ -14,7 +14,7 @@
         <p>Usa el botón de abajo para iniciarlos.</p>
       </header>
       <div class="divider"></div>
-      <button>Iniciar Saldos</button>
+      <button (click)="loadInitialBalances()">Iniciar Saldos</button>
     </section>
     <div class="container" *ngIf="balances.length >= 1">
       <article
