update: reports data through signals

--- a/src/app/modules/portal/pages/reports/components/calendars-form/calendars-form.component.html
+++ b/src/app/modules/portal/pages/reports/components/calendars-form/calendars-form.component.html
@@ -3,3 +3,4 @@
   <input type="date" formControlName="endDate" />
   <button type="submit">Consultar</button>
 </form>
+<app-loading [loading]="transfersStatus === 'loading'"></app-loading>
