--- a/src/app/modules/portal/pages/reports/components/transfers-table/transfers-table.component.html
+++ b/src/app/modules/portal/pages/reports/components/transfers-table/transfers-table.component.html
@@ -8,7 +8,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let transfer of transfers">
+    <tr *ngFor="let transfer of transfers()">
       <td class="center">{{ transfer.id }}</td>
       <td>{{ transfer.platformName }}</td>
       <td class="right">{{ transfer.value }}</td>
@@ -16,4 +16,3 @@
     </tr>
   </tbody>
 </table>
-<app-loading [loading]="transfersStatus === 'loading'"></app-loading>
