remove: platforms observable and use signals

--- a/src/app/modules/portal/pages/home/components/new-transfer-form/new-transfer-form.component.html
+++ b/src/app/modules/portal/pages/home/components/new-transfer-form/new-transfer-form.component.html
@@ -7,7 +7,7 @@
   <div>
     <datalist id="platforms">
       <option
-        *ngFor="let platform of platforms"
+        *ngFor="let platform of platforms()"
         [value]="platform.name"
       ></option>
     </datalist>
@@ -27,7 +27,7 @@
   <div>
     <label for="amount">Cantidad</label>
     <select id="amount" formControlName="amount">
-      <option *ngFor="let number of numbers" [value]="number">
+      <option *ngFor="let number of numbers()" [value]="number">
         {{ number }}
       </option>
     </select>
