temporal: little cards to show the totals

--- a/src/app/modules/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<app-little-nav [routes]="routes" class="nav"></app-little-nav>
+<!-- <app-little-nav [routes]="routes" class="nav"></app-little-nav>
 <main>
   <section id="stats" role="region" class="dash-card">
     <header>
@@ -13,5 +13,21 @@
       <h2>Total por sedes</h2>
     </header>
     <app-campuses-list></app-campuses-list>
+  </section>
+</main> -->
+<main>
+  <section role="region" id="totals">
+    <article>
+      <h3>Total</h3>
+      <p>$5.000.000</p>
+    </article>
+    <article>
+      <h3>Sede 1</h3>
+      <p>$2.000.000</p>
+    </article>
+    <article>
+      <h3>Sede 3</h3>
+      <p>$3.000.000</p>
+    </article>
   </section>
 </main>
