--- a/src/app/modules/admin/pages/dashboard/dashboard.component.css
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.css
@@ -1,4 +1,4 @@
-main {
+/* main {
   min-height: calc(100vh - var(--little-nav-h) - 2rem);
   padding: 0 2rem 4rem;
   display: flex;
@@ -23,4 +23,36 @@ main {
   #stats {
     width: 100%;
   }
+} */
+
+main {
+  padding: 2rem 2rem 4rem;
+}
+
+#totals {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 10rem;
+  gap: 3rem;
+}
+
+#totals article {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  padding: 0 2.6rem;
+  border: 1px solid var(--bg-300);
+  border-radius: 2.5rem;
+}
+
+#totals article h3 {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+#totals article p {
+  font-size: 2rem;
+  font-weight: 600;
+  color: var(--text-200);
 }
