--- a/src/app/modules/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.html
@@ -30,4 +30,20 @@
       <p>$3.000.000</p>
     </article>
   </section>
+  <section role="region" id="platforms">
+    <h2>Plataformas</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Nombre</th>
+          <th>Saldo inicial</th>
+          <th>Saldo final</th>
+          <th>Transferencias</th>
+          <th>Total</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </section>
 </main>
