temporal: sidebar to show any type of info

--- a/src/app/modules/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.html
@@ -31,7 +31,7 @@
     </article>
   </section>
   <section role="region" id="platforms">
-    <h2>Plataformas</h2>
+    <h2 class="subtitle">Plataformas</h2>
     <table>
       <thead>
         <tr>
@@ -47,3 +47,11 @@
     </table>
   </section>
 </main>
+<aside>
+  <header>
+    <h2 class="subtitle">Transferencias</h2>
+  </header>
+  <section>
+    <article></article>
+  </section>
+</aside>
