feat: navbar selected link logic

--- a/src/app/modules/admin/components/navbar/navbar.component.html
+++ b/src/app/modules/admin/components/navbar/navbar.component.html
@@ -4,11 +4,8 @@
       <h1>{{ user?.name }} {{ user?.lastName }}</h1>
     </header>
     <ul>
-      <li *ngFor="let route of routes; index as i" (click)="clickHandler(i)">
-        <a
-          [routerLink]="route.route"
-          [ngClass]="route.selected ? 'selected' : ''"
-        >
+      <li *ngFor="let route of routes; index as i">
+        <a [routerLink]="route.route" routerLinkActive="selected">
           <span class="material-symbols-outlined"> {{ route.icon }} </span>
           <span>{{ route.title }}</span>
         </a>
