--- a/src/app/modules/portal/components/navbar/navbar.component.html
+++ b/src/app/modules/portal/components/navbar/navbar.component.html
@@ -7,7 +7,10 @@
     <ul>
       <li *ngFor="let route of routes; index as i">
         <a [routerLink]="route.route" routerLinkActive="selected">
-          <span class="material-symbols-outlined">{{ route.icon }}</span>
+          <img
+            [src]="'assets/icons/' + route.icon + '.svg'"
+            [alt]="route.title"
+          />
           <span>{{ route.title }}</span>
         </a>
       </li>
