--- a/src/app/modules/portal/components/navbar/navbar.component.html
+++ b/src/app/modules/portal/components/navbar/navbar.component.html
@@ -1,30 +1,1 @@
-<nav>
-  <div>
-    <header class="hidden">
-      <span class="material-symbols-outlined"> computer </span>
-      <h1>Servinet</h1>
-    </header>
-    <ul>
-      <li *ngFor="let route of routes; index as i">
-        <a [routerLink]="route.route" routerLinkActive="selected">
-          <img
-            [src]="'assets/icons/' + route.icon + '.svg'"
-            [alt]="route.title"
-          />
-          <span>{{ route.title }}</span>
-        </a>
-      </li>
-    </ul>
-  </div>
-  <div class="hidden">
-    <ul>
-      <li>
-        <a (click)="logout()">
-          <span class="material-symbols-outlined">logout</span>
-          <span>Cerrar sesión</span>
-        </a>
-      </li>
-    </ul>
-  </div>
-</nav>
-<app-loading [loading]="logoutStatus === 'loading'"></app-loading>
+<app-nav [routes]="routes"></app-nav>
