feat: change header

--- a/src/app/modules/shared/components/nav/nav.component.css
+++ b/src/app/modules/shared/components/nav/nav.component.css
@@ -53,6 +53,7 @@ li a:hover {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: var(--bg);
   }
 
   header {
