--- a/src/styles.css
+++ b/src/styles.css
@@ -1,284 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-:root {
-  /* -- colors */
-  /* modified lavendar by https://aicolors.co/ */
-  --primary-100: #8b5fbf;
-  --primary-200: #61398f;
-  --accent-100: #d6c6e1;
-  --accent-200: #9a73b5;
-  --text-100: #333333;
-  --text-200: #555555;
-  --bg-100: #fffefb;
-  --bg-200: #f5f4f1;
-  --bg-300: #cccbc8;
-  --bg: var(--bg-100);
-  --black: #0f0f0f;
-  /* -- measures -- */
-  --nav-w: 25rem;
-  --nav-h: 8rem;
-  --little-nav-h: 7rem;
-  --header-h: 7rem;
-  --info-w: 34rem;
-}
-
-*,
-::before,
-::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-family: "Inter", sans-serif;
-  background-color: var(--bg);
-}
-
-ul {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-p,
-li {
-  font-size: 1.6rem;
-}
-
-h1,
-h2,
-h3,
-p,
-label,
-input,
-select,
-tbody,
-thead,
-li {
-  color: var(--text-100);
-}
-
-h2.title {
-  text-transform: uppercase;
-  font-size: 1.7rem;
-  color: var(--text-200);
-  padding-bottom: 0.5rem;
-  margin-bottom: 2.5rem;
-  border-bottom: 2px solid var(--text-200);
-}
-
-label {
-  display: block;
-  font-size: 1.6rem;
-  font-weight: 600;
-}
-
-button {
-  width: fit-content;
-  color: var(--bg);
-  background-color: var(--primary-100);
-  font-size: 1.8rem;
-  border: none;
-  border-radius: 1.5rem;
-  padding: 1.1rem 3rem;
-  transition-duration: 105ms;
-}
-
-button:hover {
-  cursor: pointer;
-  transform: scale(1.02);
-}
-
-button:active {
-  transform: scale(0.98);
-}
-
-input {
-  padding: 0.8rem 1.6rem;
-}
-
-select,
-input[type="date"] {
-  padding: 0.7rem 1.6rem;
-}
-
-input,
-select {
-  border: 2px solid #c0c0c0;
-  border-radius: 1rem;
-  font-size: 1.7rem;
-}
-
-input,
-select,
-button {
-  font-family: inherit;
-}
-
-input:focus,
-select:focus,
-button:focus {
-  outline: none;
-}
-
-table {
-  border-collapse: collapse;
-  border: 2px solid var(--bg-300);
-  width: 100%;
-}
-
-thead tr {
-  border-bottom: 2px solid var(--accent-100);
-  background-color: var(--bg-200);
-}
-
-thead,
-tbody {
-  font-size: 1.6rem;
-}
-
-th,
-td {
-  text-align: left;
-  padding: 1.4rem 2.8rem;
-}
-
-tbody tr:nth-child(odd) {
-  background-color: var(--bg-100);
-}
-
-tbody tr:nth-child(even) {
-  background-color: var(--bg-200);
-}
-
-tbody tr:hover {
-  background-color: #e0e0e0;
-}
-
-.shadow {
-  box-shadow: 0 0 1rem #c0c0c0;
-}
-
-.border {
-  border: 1px solid var(--bg-200);
-}
-
-.background-gradient {
-  background: linear-gradient(to bottom, var(--bg) 80%, var(--bg-200));
-}
-
-form.form-spacing,
-form.form-spacing div {
-  display: flex;
-  flex-direction: column;
-}
-
-form.form-spacing {
-  gap: 2rem;
-}
-
-form.form-spacing div {
-  gap: 0.5rem;
-}
-
-form.form-spacing strong {
-  font-size: 1.25rem;
-  color: #bb1818;
-}
-
-form.form-spacing strong::after {
-  content: ".";
-}
-
-form.form-spacing button {
-  margin-top: 1rem;
-}
-
-form.form-spacing input,
-form.form-spacing select,
-form.form-spacing button {
-  width: 100%;
-}
-
-section.dash-card {
-  width: 100%;
-  background-color: var(--bg-200);
-  padding: 3rem;
-  border-radius: 1rem;
-  box-shadow: inset 0 0 1rem var(--accent-100);
-}
-
-section.dash-card header {
-  border-bottom: 2px solid var(--accent-100);
-  padding-bottom: 1rem;
-  margin-bottom: 3rem;
-}
-
-section.dash-card header h2 {
-  font-size: 2.2rem;
-}
-
-.scroll {
-  overflow: auto;
-}
-
-@media (min-width: 701px) {
-  .page {
-    margin-left: var(--nav-w);
-  }
-}
-
-@media (max-width: 700px) {
-  p,
-  li {
-    font-size: 1.5rem;
-  }
-
-  h2.title {
-    font-size: 1.6rem;
-  }
-
-  label {
-    font-size: 1.5rem;
-  }
-
-  button {
-    font-size: 1.6rem;
-    padding: 0.85rem 4rem;
-  }
-
-  input {
-    padding: 0.6rem 1.4rem;
-  }
-
-  select,
-  input[type="date"] {
-    padding: 0.5rem 1.4rem;
-  }
-
-  input,
-  select {
-    font-size: 1.6rem;
-  }
-
-  thead,
-  tbody {
-    font-size: 1.5rem;
-  }
-
-  th,
-  td {
-    padding: 0.8rem 2.4rem;
-  }
-
-  .page {
-    margin-bottom: var(--nav-h);
-  }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
