feat: new login module to replace the another login pages

--- a/src/app/modules/portal/pages/login/components/login-form/login-form.component.html
+++ b/src/app/modules/portal/pages/login/components/login-form/login-form.component.html
@@ -1,6 +1,6 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-spacing">
+<form [formGroup]="form" (ngSubmit)="onSubmit()" class="flex flex-col gap-3">
   <div>
-    <label for="terminal">Terminal</label>
+    <label for="terminal" class="block">Terminal</label>
     <input
       type="text"
       id="terminal"
