--- a/src/app/modules/portal/pages/login/login.component.css
+++ b/src/app/modules/portal/pages/login/login.component.css
@@ -1,4 +1,4 @@
-main {
+/* main {
   min-height: 100vh;
   display: flex;
   justify-content: center;
@@ -23,4 +23,4 @@ main {
 #form h1 {
   text-align: center;
   font-size: 4rem;
-}
+} */
