big feat: remove authtoken enum and update roles, guards, routes, loggedIn and header

--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -1,17 +1,13 @@
 <header>
-  <h4>
-    {{ !userLogged() ? "Terminal" : "ID" }}<span>: </span
-    ><strong>{{
-      !userLogged() ? campusLogged()?.terminal : userLogged()?.id
-    }}</strong>
-  </h4>
+  <!-- <h4>
+    ID<span>: </span><strong>{{ loggedIn()?.id }}</strong>
+  </h4> -->
   <button>
     <img src="assets/icons/account.svg" alt="profile" />
-    <span>{{
-      !userLogged()
-        ? "Sede " + campusLogged()?.numeral
-        : userLogged()?.name + " " + userLogged()?.lastName
-    }}</span>
+    <span
+      >ID {{ loggedIn()?.id }} - {{ loggedIn()?.name }}
+      {{ loggedIn()?.lastName }}</span
+    >
     <img src="assets/icons/expand_more.svg" alt="more" />
   </button>
 </header>
