--- a/src/app/modules/login/components/login-form/login-form.component.html
+++ b/src/app/modules/login/components/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<form class="flex flex-col gap-3">
+<form class="flex flex-col gap-3" (ngSubmit)="onSubmit()" [formGroup]="form">
   <div class="flex flex-col gap-1">
     <label for="code" class="block text-gray-700 font-semibold"
       >Ingresa tu código</label
@@ -7,6 +7,7 @@
       type="text"
       id="code"
       class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
+      formControlName="code"
     />
   </div>
   <div class="flex flex-col gap-1">
@@ -17,6 +18,7 @@
       type="password"
       id="password"
       class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
+      formControlName="password"
     />
   </div>
   <button
