updates: remove campus ecosystem, login pages and update logged in logic

--- a/src/app/modules/admin/pages/platforms/platforms.component.html
+++ b/src/app/modules/admin/pages/platforms/platforms.component.html
@@ -51,11 +51,11 @@
         </p>
         <p>
           <span>Fecha y hora de creación</span>
-          <span>{{ platformInfo.createdAt }}</span>
+          <span>{{ platformInfo.createdDate }}</span>
         </p>
         <p>
           <span>Actualizado por última vez</span>
-          <span>{{ platformInfo.updatedAt }}</span>
+          <span>{{ platformInfo.modifiedDate }}</span>
         </p>
       </section>
       <div class="divider"></div>
