--- a/src/app/modules/portal/pages/reports/components/transfers-table/transfers-table.component.html
+++ b/src/app/modules/portal/pages/reports/components/transfers-table/transfers-table.component.html
@@ -8,11 +8,11 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let transfer of transfers()">
+    <!-- <tr *ngFor="let transfer of transfers()">
       <td class="center">{{ transfer.id }}</td>
       <td>{{ transfer.platformName }}</td>
       <td class="right">{{ transfer.value }}</td>
       <td class="center">{{ transfer.createdAt }}</td>
-    </tr>
+    </tr> -->
   </tbody>
 </table>
