--- a/src/app/modules/portal/portal.component.html
+++ b/src/app/modules/portal/portal.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-portal-navbar></app-portal-navbar>
 <app-header></app-header>
 <div class="page">
   <router-outlet></router-outlet>
