--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,4 +1,4 @@
-<main class="w-full h-screen bg-purple-50 flex justify-center items-center">
+<main class="w-full h-screen flex justify-center items-center">
   <article class="bg-white rounded-xl drop-shadow-lg">
     <section class="px-8 py-6">
       <header class="mb-5 flex flex-col gap-1.5">
