--- a/src/app/modules/shared/components/nav/nav.component.html
+++ b/src/app/modules/shared/components/nav/nav.component.html
@@ -1,30 +1,38 @@
-<nav>
-  <div>
-    <header class="hidden">
+<nav
+  class="w-56 h-screen fixed px-5 left-0 top-0 bottom-0 bg-purple-50 border-r-2 border-gray-200 flex flex-col justify-between"
+>
+  <section>
+    <header class="h-16 flex items-center gap-2 mb-5 px-4 py-2">
       <img src="assets/icons/computer.svg" alt="computer" />
-      <h1>Servinet</h1>
+      <h1 class="text-gray-800 text-xl font-semibold">Servinet</h1>
     </header>
-    <ul>
+    <ul class="flex flex-col gap-5">
       <li *ngFor="let route of routes(); index as i">
-        <a [routerLink]="route.route" routerLinkActive="selected">
+        <a
+          [routerLink]="route.route"
+          routerLinkActive="bg-purple-200"
+          class="flex items-center gap-2 px-4 py-2 rounded-3xl"
+        >
           <img
             [src]="'assets/icons/' + route.icon + '.svg'"
             [alt]="route.title"
           />
-          <span>{{ route.title }}</span>
+          <span class="text-lg text-gray-800">{{ route.title }}</span>
         </a>
       </li>
     </ul>
-  </div>
-  <div class="hidden">
+  </section>
+  <section class="mb-5">
     <ul>
       <li>
-        <a (click)="logout()">
+        <a
+          (click)="logout()"
+          class="flex items-center gap-2 px-4 py-2 rounded-3xl cursor-pointer"
+        >
           <img src="assets/icons/logout.svg" alt="logout" />
-          <span>Cerrar sesión</span>
+          <span class="text-lg text-gray-800">Cerrar sesión</span>
         </a>
       </li>
     </ul>
-  </div>
+  </section>
 </nav>
-<app-loading [loading]="logoutStatus === 'loading'"></app-loading>
