--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -1,12 +1,12 @@
 <header
-  class="w-[calc(100% - 14rem)] h-16 ml-56 sticky top-0 right-0 px-2 bg-purple-50 drop-shadow-md flex items-center justify-between"
+  class="w-[calc(100% - 14rem)] h-16 ml-56 sticky top-0 right-0 px-2 bg-purple-900 text-purple-200 drop-shadow-xl flex items-center justify-between"
 >
   <!-- <h4>
     ID<span>: </span><strong>{{ loggedIn()?.id }}</strong>
   </h4> -->
   <button class="px-4 py-2 flex items-center gap-3 ms-auto">
     <img src="assets/icons/account.svg" alt="profile" />
-    <span
+    <span class="font-medium"
       >ID {{ loggedIn()?.id }} - {{ loggedIn()?.name }}
       {{ loggedIn()?.lastName }}</span
     >
