feat: define layout to admin pages

--- a/src/app/modules/admin/pages/platforms/platforms.component.html
+++ b/src/app/modules/admin/pages/platforms/platforms.component.html
@@ -1,94 +1,1 @@
-<main>
-  <section class="dash-card">
-    <header>
-      <h2>{{ headerTitle }}</h2>
-      <span
-        class="add material-symbols-outlined"
-        *ngIf="!isShowingInfo"
-        (click)="openModal()"
-      >
-        add
-      </span>
-    </header>
-    <h3 *ngIf="platforms.length === 0 && !isShowingInfo">
-      No hay plataformas registradas
-    </h3>
-    <div class="scroll">
-      <table *ngIf="platforms.length > 0 && !isShowingInfo" class="shadow">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>Nombre</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr
-            *ngFor="let platform of platforms"
-            (click)="setIsShowingInfo(platform)"
-          >
-            <td>{{ platform.id }}</td>
-            <td>{{ platform.name }}</td>
-            <td>
-              <span class="right material-symbols-outlined">
-                chevron_right
-              </span>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <article *ngIf="isShowingInfo">
-      <section class="platform-info">
-        <h3>Información detallada</h3>
-        <p>
-          <span>ID generado</span>
-          <span>{{ platformInfo.id }}</span>
-        </p>
-        <p>
-          <span>Nombre asignado</span>
-          <span>{{ platformInfo.name }}</span>
-        </p>
-        <p>
-          <span>Fecha y hora de creación</span>
-          <span>{{ platformInfo.createdDate }}</span>
-        </p>
-        <p>
-          <span>Actualizado por última vez</span>
-          <span>{{ platformInfo.modifiedDate }}</span>
-        </p>
-      </section>
-      <div class="divider"></div>
-      <section class="actions">
-        <button type="button" (click)="setIsShowingInfo(undefined)">
-          Regresar
-        </button>
-      </section>
-    </article>
-  </section>
-  <app-modal
-    modalId="new-platform-modal"
-    modalTitle="Registro de nueva plataforma"
-  >
-    <section>
-      <form class="form-spacing" [formGroup]="form" (ngSubmit)="onSubmit()">
-        <div>
-          <label for="name">Nombre de la plataforma</label>
-          <input
-            type="text"
-            id="name"
-            formControlName="name"
-            autocomplete="name"
-          />
-          <strong *ngIf="hasError('name', 'required')"
-            >El nombre es requerido</strong
-          >
-        </div>
-        <button type="submit">Registrar</button>
-      </form>
-    </section>
-  </app-modal>
-</main>
-<app-loading
-  [loading]="platformsStatus === 'loading' || formStatus === 'loading'"
-></app-loading>
+<p>dsfsdfdsf</p>
