--- a/src/app/modules/admin/admin.component.html
+++ b/src/app/modules/admin/admin.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<main class="ml-56 w-[calc(100%-14rem)] min-h-[calc(100vh-4rem)] px-6 py-5">
+  <router-outlet></router-outlet>
+</main>
