--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header
-  class="w-[calc(100% - 14rem)] h-16 ml-56 sticky top-0 right-0 px-2 bg-purple-900 text-purple-200 drop-shadow-xl flex items-center justify-between"
+  class="w-[calc(100%-14rem)] h-16 ml-56 sticky top-0 right-0 px-2 bg-purple-900 text-purple-200 drop-shadow-xl flex items-center justify-between"
 >
   <!-- <h4>
     ID<span>: </span><strong>{{ loggedIn()?.id }}</strong>
