feat: design little form to create new platforms

--- a/src/app/modules/admin/pages/platforms/platforms.component.html
+++ b/src/app/modules/admin/pages/platforms/platforms.component.html
@@ -1,1 +1,22 @@
-<p>dsfsdfdsf</p>
+<header>
+  <h2>Plataformas</h2>
+</header>
+<section class="border-2 border-neutral-300 rounded-md px-5 py-6">
+  <h3 class="text-xl text-gray-800 mb-3">Registrar nueva plataforma</h3>
+  <form class="w-full">
+    <label for="name" class="block text-gray-700 font-medium">Nombre</label>
+    <div class="flex items-center gap-7">
+      <input
+        type="text"
+        id="name"
+        class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
+      />
+      <button
+        type="submit"
+        class="bg-purple-600 text-purple-100 text-lg px-6 py-1.5 rounded-xl font-semibold"
+      >
+        Registrar
+      </button>
+    </div>
+  </form>
+</section>
