feat: design header to show the title and a little description

--- a/src/app/modules/admin/pages/platforms/platforms.component.html
+++ b/src/app/modules/admin/pages/platforms/platforms.component.html
@@ -1,7 +1,13 @@
-<header>
-  <h2>Plataformas</h2>
+<header
+  class="border-b-2 border-neutral-300 pt-3 pb-4 mb-5 px-6 -ml-6 w-[calc(100vw-14rem)]"
+>
+  <h2 class="text-2xl text-gray-800 font-medium">Plataformas</h2>
+  <p class="text-gray-600 mt-1">
+    Ten control absoluto de todas las plataformas a las que quieres administrar
+    sus saldos y transferencias.
+  </p>
 </header>
-<section class="border-2 border-neutral-300 rounded-md px-5 py-6">
+<section class="border-2 border-neutral-300 rounded-md px-5 pt-5 pb-6">
   <h3 class="text-xl text-gray-800 mb-3">Registrar nueva plataforma</h3>
   <form class="w-full">
     <label for="name" class="block text-gray-700 font-medium">Nombre</label>
