--- a/src/app/modules/admin/admin.component.html
+++ b/src/app/modules/admin/admin.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 <app-navbar></app-navbar>
-<main class="ml-56 w-[calc(100%-14rem)] min-h-[calc(100vh-4rem)] px-6 py-5">
+<main class="ml-56 w-[calc(100%-14rem)] min-h-[calc(100vh-4rem)] px-6 pb-5">
   <router-outlet></router-outlet>
 </main>
