--- a/src/app/modules/admin/pages/platforms/platforms.component.html
+++ b/src/app/modules/admin/pages/platforms/platforms.component.html
@@ -1,7 +1,7 @@
 <header
   class="border-b-2 border-neutral-300 pt-3 pb-4 mb-5 px-6 -ml-6 w-[calc(100vw-14rem)]"
 >
-  <h2 class="text-2xl text-gray-800 font-medium">Plataformas</h2>
+  <h2 class="text-3xl text-gray-800 font-medium">Plataformas</h2>
   <p class="text-gray-600 mt-1">
     Ten control absoluto de todas las plataformas a las que quieres administrar
     sus saldos y transferencias.
@@ -25,4 +25,30 @@
       </button>
     </div>
   </form>
+</section>
+<section class="mt-10">
+  <h3 class="text-2xl text-gray-700 font-medium mb-3">
+    Listado de plataformas registradas
+  </h3>
+  <div class="px-5 pt-5 pb-6 bg-white rounded-lg drop-shadow-lg">
+    <table class="w-full">
+      <thead>
+        <tr>
+          <th class="text-center w-24 bg-slate-600">#</th>
+          <th class="text-left">Nombre</th>
+          <th class="w-24 bg-slate-600"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="text-center">1</td>
+          <td class="text-left">Google</td>
+          <td class="flex items-center justify-end gap-3">
+            <span class="w-7 h-7 bg-neutral-400 block rounded-md"></span>
+            <span class="w-7 h-7 bg-neutral-400 block rounded-md"></span>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </section>
