--- a/src/app/modules/admin/pages/platforms/platforms.component.html
+++ b/src/app/modules/admin/pages/platforms/platforms.component.html
@@ -33,17 +33,31 @@
   <div class="px-5 pt-5 pb-6 bg-white rounded-lg drop-shadow-lg">
     <table class="w-full">
       <thead>
-        <tr>
-          <th class="text-center w-24 bg-slate-600">#</th>
-          <th class="text-left">Nombre</th>
-          <th class="w-24 bg-slate-600"></th>
+        <tr class="bg-gray-50">
+          <th
+            class="text-center text-gray-800 text-sm px-5 py-2 uppercase w-20"
+          >
+            #
+          </th>
+          <th class="text-left text-gray-800 text-sm px-5 py-2 uppercase">
+            Nombre
+          </th>
+          <th class="w-24"></th>
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td class="text-center">1</td>
-          <td class="text-left">Google</td>
-          <td class="flex items-center justify-end gap-3">
+        <tr class="even:bg-gray-50 odd:bg-white hover:bg-gray-100">
+          <td class="text-center text-gray-900 px-5 py-2">1</td>
+          <td class="text-left text-gray-900 px-5 py-2">Google</td>
+          <td class="flex items-center justify-center gap-3">
+            <span class="w-7 h-7 bg-neutral-400 block rounded-md"></span>
+            <span class="w-7 h-7 bg-neutral-400 block rounded-md"></span>
+          </td>
+        </tr>
+        <tr class="even:bg-gray-50 odd:bg-white hover:bg-gray-100">
+          <td class="text-center text-gray-900 px-5 py-2">2</td>
+          <td class="text-left text-gray-900 px-5 py-2">Angular</td>
+          <td class="flex items-center justify-center gap-3">
             <span class="w-7 h-7 bg-neutral-400 block rounded-md"></span>
             <span class="w-7 h-7 bg-neutral-400 block rounded-md"></span>
           </td>
