refactor: create new platform form component

--- a/src/app/modules/admin/pages/platforms/platforms.component.html
+++ b/src/app/modules/admin/pages/platforms/platforms.component.html
@@ -5,22 +5,7 @@ sus saldos y transferencias"
 ></app-header-title>
 <section class="border-2 border-neutral-300 rounded-md px-5 pt-5 pb-6">
   <h3 class="text-xl text-gray-800 mb-3">Registrar nueva plataforma</h3>
-  <form class="w-full">
-    <label for="name" class="block text-gray-700 font-medium">Nombre</label>
-    <div class="flex items-center gap-7">
-      <input
-        type="text"
-        id="name"
-        class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
-      />
-      <button
-        type="submit"
-        class="bg-purple-600 text-purple-100 text-lg px-6 py-1.5 rounded-xl font-semibold"
-      >
-        Registrar
-      </button>
-    </div>
-  </form>
+  <app-new-platform-form></app-new-platform-form>
 </section>
 <section class="mt-10">
   <h3 class="text-2xl text-gray-700 font-medium mb-3">
