--- a/src/app/modules/admin/pages/platforms/components/platforms-list/platforms-list.component.html
+++ b/src/app/modules/admin/pages/platforms/components/platforms-list/platforms-list.component.html
@@ -1,4 +1,10 @@
-<table class="w-full">
+<p
+  *ngIf="platforms().length === 0"
+  class="text-center text-gray-800 font-medium"
+>
+  Sin plataformas registradas...
+</p>
+<table class="w-full" *ngIf="platforms().length > 0">
   <thead>
     <tr class="bg-gray-50">
       <th class="text-center text-gray-800 text-sm px-5 py-2 uppercase w-20">
@@ -11,21 +17,16 @@
     </tr>
   </thead>
   <tbody>
-    <tr class="even:bg-gray-50 odd:bg-white hover:bg-gray-100">
-      <td class="text-center text-gray-900 px-5 py-2">1</td>
-      <td class="text-left text-gray-900 px-5 py-2">Google</td>
-      <td class="flex items-center justify-center gap-3">
-        <span class="w-7 h-7 bg-neutral-400 block rounded-md"></span>
-        <span class="w-7 h-7 bg-neutral-400 block rounded-md"></span>
-      </td>
-    </tr>
-    <tr class="even:bg-gray-50 odd:bg-white hover:bg-gray-100">
-      <td class="text-center text-gray-900 px-5 py-2">2</td>
-      <td class="text-left text-gray-900 px-5 py-2">Angular</td>
-      <td class="flex items-center justify-center gap-3">
-        <span class="w-7 h-7 bg-neutral-400 block rounded-md"></span>
-        <span class="w-7 h-7 bg-neutral-400 block rounded-md"></span>
-      </td>
-    </tr>
+    <ng-container *ngFor="let platform of platforms()">
+      <tr class="even:bg-gray-50 odd:bg-white hover:bg-gray-100">
+        <td class="text-center text-gray-900 px-5 py-2">{{ platform.id }}</td>
+        <td class="text-left text-gray-900 px-5 py-2">{{ platform.name }}</td>
+        <td class="flex items-center justify-center gap-3">
+          <span class="w-7 h-7 bg-neutral-400 block rounded-md"></span>
+          <span class="w-7 h-7 bg-neutral-400 block rounded-md"></span>
+        </td>
+      </tr>
+    </ng-container>
   </tbody>
 </table>
+<app-loading [loading]="loading()"></app-loading>
