update: heading page

--- a/src/app/modules/admin/pages/users/users.component.html
+++ b/src/app/modules/admin/pages/users/users.component.html
@@ -1,1 +1,4 @@
-<p>users works!</p>
+<app-header-title
+  hTitle="Usuarios"
+  hDescription="Aquí podrás administrar todo tipo de usuarios vinculados con la empresa mediante roles"
+></app-header-title>
