--- a/src/app/modules/admin/pages/users/users.component.html
+++ b/src/app/modules/admin/pages/users/users.component.html
@@ -20,16 +20,16 @@
           <th class="text-left text-gray-800 text-sm px-5 py-2 uppercase">
             Nombre y Apellido
           </th>
-          <th class="text-left text-gray-800 text-sm px-5 py-2 uppercase w-fit">
+          <th class="text-left text-gray-800 text-sm px-5 py-2 uppercase w-20">
             Código
           </th>
-          <th class="text-left text-gray-800 text-sm px-5 py-2 uppercase">
+          <th class="text-left text-gray-800 text-sm px-5 py-2 uppercase w-40">
             Rol
           </th>
-          <th class="text-left text-gray-800 text-sm px-5 py-2 uppercase">
+          <th class="text-left text-gray-800 text-sm px-5 py-2 uppercase w-32">
             Estado
           </th>
-          <th class="text-left text-gray-800 text-sm px-5 py-2 uppercase">
+          <th class="text-left text-gray-800 text-sm px-5 py-2 uppercase w-48">
             Fecha de registro
           </th>
           <th class="w-24"></th>
@@ -39,9 +39,9 @@
         <tr class="even:bg-gray-50 odd:bg-white hover:bg-gray-100">
           <td class="text-center text-gray-900 px-5 py-2">1</td>
           <td class="text-left text-gray-900 px-5 py-2">José Grisales</td>
-          <td class="text-left text-gray-900 px-5 py-2">a999</td>
+          <td class="text-left text-gray-900 px-5 py-2">a99</td>
           <td class="text-left text-gray-900 px-5 py-2">ADMINISTRADOR</td>
-          <td class="text-left text-gray-900 px-5 py-2">Habilitado</td>
+          <td class="text-left text-gray-900 px-5 py-2">Deshabilitado</td>
           <td class="text-left text-gray-900 px-5 py-2">
             {{ date | date }}
           </td>
