feat: design some filters and add a register button

--- a/src/app/modules/admin/pages/users/components/users-list/users-list.component.html
+++ b/src/app/modules/admin/pages/users/components/users-list/users-list.component.html
@@ -1,4 +1,4 @@
-<div class="px-5 pt-5 pb-6 bg-white rounded-lg drop-shadow-lg overflow-x-auto">
+<div class="overflow-x-auto">
   <table class="w-full">
     <thead>
       <tr class="bg-gray-50">
