--- a/src/app/modules/admin/pages/users/users.component.html
+++ b/src/app/modules/admin/pages/users/users.component.html
@@ -3,8 +3,49 @@
   hDescription="Aquí podrás administrar todo tipo de usuarios vinculados con la empresa mediante roles"
 ></app-header-title>
 <section class="mt-10">
-  <h3 class="text-2xl text-gray-700 font-medium mb-3">
-    Listado de usuarios registrados
-  </h3>
-  <app-users-list></app-users-list>
+  <div class="px-5 pt-5 pb-6 bg-white rounded-lg drop-shadow-lg">
+    <h3 class="text-2xl text-gray-700 font-medium mb-3">
+      Listado de usuarios registrados
+    </h3>
+    <div class="flex flex-col gap-3">
+      <div class="flex items-center justify-between">
+        <form class="flex items-center gap-3">
+          <label for="role" class="text-gray-700 font-medium"
+            >Filtrar por Rol:</label
+          >
+          <select
+            id="role"
+            class="outline-none rounded-lg px-2 py-0.5 border border-gray-400 text-gray-700"
+          >
+            <option value="">Todos</option>
+            <option value="">Cajero</option>
+            <option value="">Supervisor</option>
+            <option value="">Administrador</option>
+          </select>
+        </form>
+        <button
+          type="button"
+          class="bg-purple-600 text-purple-100 text-lg px-6 py-1.5 rounded-xl font-semibold"
+        >
+          Añadir usuario
+        </button>
+      </div>
+      <div class="h-px w-full bg-neutral-300"></div>
+      <form class="flex items-center gap-5">
+        <div class="flex items-center gap-1">
+          <input type="radio" id="all" value="all" name="enabled" checked />
+          <label for="all" class="text-gray-700">Todos</label>
+        </div>
+        <div class="flex items-center gap-1">
+          <input type="radio" id="enabled" value="enabled" name="enabled" />
+          <label for="enabled" class="text-gray-700">Habilitado</label>
+        </div>
+        <div class="flex items-center gap-1">
+          <input type="radio" id="disabled" value="disabled" name="enabled" />
+          <label for="disabled" class="text-gray-700">Deshabilitado</label>
+        </div>
+      </form>
+      <app-users-list></app-users-list>
+    </div>
+  </div>
 </section>
