--- a/src/app/modules/admin/pages/users/users.component.html
+++ b/src/app/modules/admin/pages/users/users.component.html
@@ -57,79 +57,5 @@
   <h4 class="text-xl text-gray-800 font-medium px-5 mb-3">
     Registro de usuario
   </h4>
-  <form class="flex flex-col gap-3 px-5">
-    <div class="flex flex-col gap-1">
-      <label for="name" class="block text-gray-700 font-semibold">Nombre</label>
-      <input
-        type="text"
-        id="name"
-        class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
-      />
-    </div>
-    <div class="flex flex-col gap-1">
-      <label for="lastName" class="block text-gray-700 font-semibold"
-        >Apellido(s)</label
-      >
-      <input
-        type="text"
-        id="lastName"
-        class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
-      />
-    </div>
-    <div class="flex flex-col gap-1">
-      <label for="code" class="block text-gray-700 font-semibold">Código</label>
-      <input
-        type="text"
-        id="code"
-        class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
-        disabled
-      />
-    </div>
-    <div class="flex flex-col gap-1">
-      <label for="password" class="block text-gray-700 font-semibold"
-        >Contraseña</label
-      >
-      <input
-        type="password"
-        id="password"
-        class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
-      />
-    </div>
-    <div class="flex flex-col gap-1">
-      <label for="repeatPassword" class="block text-gray-700 font-semibold"
-        >Confirma la contraseña</label
-      >
-      <input
-        type="password"
-        id="repeatPassword"
-        class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
-      />
-    </div>
-    <div class="flex flex-col gap-1">
-      <label for="role" class="block text-gray-700 font-semibold"
-        >Rol de usuario</label
-      >
-      <select
-        id="role"
-        class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
-      >
-        <option value="">CAJERO</option>
-        <option value="">SUPERVISOR</option>
-        <option value="">ADMINISTRADOR</option>
-      </select>
-    </div>
-    <button
-      type="button"
-      class="bg-purple-600 text-purple-100 text-lg mt-3 px-6 py-1.5 rounded-xl font-semibold"
-    >
-      Registrar
-    </button>
-    <button
-      type="button"
-      class="bg-neutral-600 text-neutral-100 text-lg px-6 py-1.5 rounded-xl font-semibold"
-      (click)="cancelRegister()"
-    >
-      Cancelar
-    </button>
-  </form>
+  <app-new-user-form (onCancel)="cancelRegister()"></app-new-user-form>
 </aside>
