--- a/src/app/modules/admin/pages/users/users.component.html
+++ b/src/app/modules/admin/pages/users/users.component.html
@@ -9,20 +9,7 @@
     </h3>
     <div class="flex flex-col gap-3">
       <div class="flex items-center justify-between">
-        <form class="flex items-center gap-3">
-          <label for="role" class="text-gray-700 font-medium"
-            >Filtrar por Rol:</label
-          >
-          <select
-            id="role"
-            class="outline-none rounded-lg px-2 py-0.5 border border-gray-400 text-gray-700"
-          >
-            <option value="">Todos</option>
-            <option value="">Cajero</option>
-            <option value="">Supervisor</option>
-            <option value="">Administrador</option>
-          </select>
-        </form>
+        <app-filter-by-role></app-filter-by-role>
         <button
           type="button"
           class="bg-purple-600 text-purple-100 text-lg px-6 py-1.5 rounded-xl font-semibold"
@@ -32,20 +19,7 @@
         </button>
       </div>
       <div class="h-px w-full bg-neutral-300"></div>
-      <form class="flex items-center gap-5">
-        <div class="flex items-center gap-1">
-          <input type="radio" id="all" value="all" name="enabled" checked />
-          <label for="all" class="text-gray-700">Todos</label>
-        </div>
-        <div class="flex items-center gap-1">
-          <input type="radio" id="enabled" value="enabled" name="enabled" />
-          <label for="enabled" class="text-gray-700">Habilitado</label>
-        </div>
-        <div class="flex items-center gap-1">
-          <input type="radio" id="disabled" value="disabled" name="enabled" />
-          <label for="disabled" class="text-gray-700">Deshabilitado</label>
-        </div>
-      </form>
+      <app-filter-by-enabled></app-filter-by-enabled>
       <app-users-list></app-users-list>
     </div>
   </div>
