--- a/src/app/modules/admin/pages/users/components/new-user-form/new-user-form.component.html
+++ b/src/app/modules/admin/pages/users/components/new-user-form/new-user-form.component.html
@@ -1,10 +1,15 @@
-<form class="flex flex-col gap-3 px-5">
+<form
+  class="flex flex-col gap-3 px-5"
+  [formGroup]="form"
+  (ngSubmit)="onSubmit()"
+>
   <div class="flex flex-col gap-1">
     <label for="name" class="block text-gray-700 font-semibold">Nombre</label>
     <input
       type="text"
       id="name"
       class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
+      formControlName="name"
     />
   </div>
   <div class="flex flex-col gap-1">
@@ -15,15 +20,7 @@
       type="text"
       id="lastName"
       class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
-    />
-  </div>
-  <div class="flex flex-col gap-1">
-    <label for="code" class="block text-gray-700 font-semibold">Código</label>
-    <input
-      type="text"
-      id="code"
-      class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
-      disabled
+      formControlName="lastName"
     />
   </div>
   <div class="flex flex-col gap-1">
@@ -34,6 +31,7 @@
       type="password"
       id="password"
       class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
+      formControlName="password"
     />
   </div>
   <div class="flex flex-col gap-1">
@@ -44,6 +42,7 @@
       type="password"
       id="repeatPassword"
       class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
+      formControlName="repeatPassword"
     />
   </div>
   <div class="flex flex-col gap-1">
@@ -53,14 +52,15 @@
     <select
       id="role"
       class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
+      formControlName="role"
     >
-      <option value="">CAJERO</option>
-      <option value="">SUPERVISOR</option>
-      <option value="">ADMINISTRADOR</option>
+      <option value="CASHIER">CAJERO</option>
+      <option value="SUPERVISOR">SUPERVISOR</option>
+      <option value="ADMIN">ADMINISTRADOR</option>
     </select>
   </div>
   <button
-    type="button"
+    type="submit"
     class="bg-purple-600 text-purple-100 text-lg mt-3 px-6 py-1.5 rounded-xl font-semibold"
   >
     Registrar
