feat: create button component and use it

--- a/src/app/modules/admin/pages/platforms/components/new-platform-form/new-platform-form.component.html
+++ b/src/app/modules/admin/pages/platforms/components/new-platform-form/new-platform-form.component.html
@@ -7,12 +7,7 @@
       class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
       formControlName="name"
     />
-    <button
-      type="submit"
-      class="bg-violet-600 text-violet-100 text-lg px-6 py-1.5 rounded-xl font-semibold"
-    >
-      Registrar
-    </button>
+    <app-button type="submit">Registrar</app-button>
   </div>
 </form>
 <app-loading [loading]="loading()"></app-loading>
