--- a/src/app/modules/admin/pages/users/components/new-user-form/new-user-form.component.html
+++ b/src/app/modules/admin/pages/users/components/new-user-form/new-user-form.component.html
@@ -59,17 +59,10 @@
       <option value="ADMIN">ADMINISTRADOR</option>
     </select>
   </div>
-  <button
-    type="submit"
-    class="bg-violet-600 text-violet-100 text-lg mt-3 px-6 py-1.5 rounded-xl font-semibold"
-  >
-    Registrar
-  </button>
-  <button
-    type="button"
-    class="bg-neutral-600 text-neutral-100 text-lg px-6 py-1.5 rounded-xl font-semibold"
-    (click)="emitOnCancel()"
-  >
-    Cancelar
-  </button>
+  <section class="mt-3 flex flex-col gap-4">
+    <app-button type="submit">Registrar</app-button>
+    <app-button type="button" color="neutral" (click)="emitOnCancel()"
+      >Cancelar</app-button
+    >
+  </section>
 </form>
