--- a/src/app/modules/admin/pages/users/users.component.html
+++ b/src/app/modules/admin/pages/users/users.component.html
@@ -10,13 +10,9 @@
     <div class="flex flex-col gap-3">
       <div class="flex items-center justify-between">
         <app-filter-by-role></app-filter-by-role>
-        <button
-          type="button"
-          class="bg-violet-600 text-violet-100 text-lg px-6 py-1.5 rounded-xl font-semibold"
-          (click)="toggleShowSideBar()"
+        <app-button type="button" (click)="toggleShowSideBar()"
+          >Añadir usuario</app-button
         >
-          Añadir usuario
-        </button>
       </div>
       <div class="h-px w-full bg-neutral-300"></div>
       <app-filter-by-enabled></app-filter-by-enabled>
