--- a/src/app/modules/login/components/login-form/login-form.component.html
+++ b/src/app/modules/login/components/login-form/login-form.component.html
@@ -21,12 +21,7 @@
       formControlName="password"
     />
   </div>
-  <button
-    type="submit"
-    class="bg-purple-500 text-white text-lg w-full px-4 py-1.5 rounded-xl mt-2 font-semibold"
-  >
-    Iniciar sesión
-  </button>
+  <app-button type="submit" class="mt-2">Iniciar sesión</app-button>
   <a
     href="#"
     class="text-center text-blue-500 text-base font-semibold hover:text-blue-400"
