--- a/src/app/modules/admin/pages/users/components/filter-by-enabled/filter-by-enabled.component.html
+++ b/src/app/modules/admin/pages/users/components/filter-by-enabled/filter-by-enabled.component.html
@@ -1,14 +1,14 @@
-<form class="flex items-center gap-5">
-  <div class="flex items-center gap-1">
+<form class="flex-row">
+  <div class="control-row">
     <input type="radio" id="all" value="all" name="enabled" checked />
-    <label for="all" class="text-gray-700">Todos</label>
+    <label for="all" class="font-normal">Todos</label>
   </div>
-  <div class="flex items-center gap-1">
+  <div class="control-row">
     <input type="radio" id="enabled" value="enabled" name="enabled" />
-    <label for="enabled" class="text-gray-700">Habilitado</label>
+    <label for="enabled" class="font-normal">Habilitado</label>
   </div>
-  <div class="flex items-center gap-1">
+  <div class="control-row">
     <input type="radio" id="disabled" value="disabled" name="enabled" />
-    <label for="disabled" class="text-gray-700">Deshabilitado</label>
+    <label for="disabled" class="font-normal">Deshabilitado</label>
   </div>
 </form>
