--- a/src/app/modules/admin/pages/users/components/filter-by-role/filter-by-role.component.html
+++ b/src/app/modules/admin/pages/users/components/filter-by-role/filter-by-role.component.html
@@ -1,9 +1,6 @@
-<form class="flex items-center gap-3">
-  <label for="role" class="text-gray-700 font-medium">Filtrar por Rol:</label>
-  <select
-    id="role"
-    class="outline-none rounded-lg px-2 py-0.5 border border-gray-400 text-gray-700"
-  >
+<form class="flex-row">
+  <label for="role" class="w-44">Filtrar por Rol:</label>
+  <select id="role" class="px-2 py-0.5">
     <option value="">Todos</option>
     <option value="">Cajero</option>
     <option value="">Supervisor</option>
