--- a/src/app/modules/admin/pages/users/components/new-user-form/new-user-form.component.html
+++ b/src/app/modules/admin/pages/users/components/new-user-form/new-user-form.component.html
@@ -1,65 +1,33 @@
-<form
-  class="flex flex-col gap-3 px-5"
-  [formGroup]="form"
-  (ngSubmit)="onSubmit()"
->
-  <div class="flex flex-col gap-1">
-    <label for="name" class="block text-gray-700 font-semibold">Nombre</label>
-    <input
-      type="text"
-      id="name"
-      class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
-      formControlName="name"
-    />
+<form class="px-5" [formGroup]="form" (ngSubmit)="onSubmit()">
+  <div class="control">
+    <label for="name">Nombre</label>
+    <input type="text" id="name" formControlName="name" />
   </div>
-  <div class="flex flex-col gap-1">
-    <label for="lastName" class="block text-gray-700 font-semibold"
-      >Apellido(s)</label
-    >
-    <input
-      type="text"
-      id="lastName"
-      class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
-      formControlName="lastName"
-    />
+  <div class="control">
+    <label for="lastName">Apellido(s)</label>
+    <input type="text" id="lastName" formControlName="lastName" />
   </div>
-  <div class="flex flex-col gap-1">
-    <label for="password" class="block text-gray-700 font-semibold"
-      >Contraseña</label
-    >
-    <input
-      type="password"
-      id="password"
-      class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
-      formControlName="password"
-    />
+  <div class="control">
+    <label for="password">Contraseña</label>
+    <input type="password" id="password" formControlName="password" />
   </div>
-  <div class="flex flex-col gap-1">
-    <label for="repeatPassword" class="block text-gray-700 font-semibold"
-      >Confirma la contraseña</label
-    >
+  <div class="control">
+    <label for="repeatPassword">Confirma la contraseña</label>
     <input
       type="password"
       id="repeatPassword"
-      class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
       formControlName="repeatPassword"
     />
   </div>
-  <div class="flex flex-col gap-1">
-    <label for="role" class="block text-gray-700 font-semibold"
-      >Rol de usuario</label
-    >
-    <select
-      id="role"
-      class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
-      formControlName="role"
-    >
+  <div class="control">
+    <label for="role">Rol de usuario</label>
+    <select id="role" formControlName="role">
       <option value="CASHIER">CAJERO</option>
       <option value="SUPERVISOR">SUPERVISOR</option>
       <option value="ADMIN">ADMINISTRADOR</option>
     </select>
   </div>
-  <section class="mt-3 flex flex-col gap-4">
+  <section class="mt-3 row-spacing">
     <app-button type="submit">Registrar</app-button>
     <app-button type="button" color="neutral" (click)="emitOnCancel()"
       >Cancelar</app-button
