--- a/src/app/modules/login/components/login-form/login-form.component.html
+++ b/src/app/modules/login/components/login-form/login-form.component.html
@@ -1,25 +1,11 @@
-<form class="flex flex-col gap-3" (ngSubmit)="onSubmit()" [formGroup]="form">
-  <div class="flex flex-col gap-1">
-    <label for="code" class="block text-gray-700 font-semibold"
-      >Ingresa tu código</label
-    >
-    <input
-      type="text"
-      id="code"
-      class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
-      formControlName="code"
-    />
+<form (ngSubmit)="onSubmit()" [formGroup]="form">
+  <div class="control">
+    <label for="code">Ingresa tu código</label>
+    <input type="text" id="code" formControlName="code" />
   </div>
-  <div class="flex flex-col gap-1">
-    <label for="password" class="block text-gray-700 font-semibold"
-      >Contraseña</label
-    >
-    <input
-      type="password"
-      id="password"
-      class="w-full outline-none rounded-lg px-4 py-1 border border-gray-400 text-lg text-gray-700"
-      formControlName="password"
-    />
+  <div class="control">
+    <label for="password">Contraseña</label>
+    <input type="password" id="password" formControlName="password" />
   </div>
   <app-button type="submit" class="mt-2">Iniciar sesión</app-button>
   <a
