feat: create temporary design to create new transaction

--- a/src/app/modules/portal/portal.component.html
+++ b/src/app/modules/portal/portal.component.html
@@ -1,5 +1,5 @@
-<app-portal-navbar></app-portal-navbar>
 <app-header></app-header>
-<div class="page">
+<app-portal-navbar></app-portal-navbar>
+<main class="ml-56 w-[calc(100%-14rem)] min-h-[calc(100vh-4rem)] px-6 pb-5">
   <router-outlet></router-outlet>
-</div>
+</main>
