--- a/src/app/modules/portal/pages/home/home.component.html
+++ b/src/app/modules/portal/pages/home/home.component.html
@@ -1,16 +1,6 @@
-<main>
-  <section role="region" id="new-transfer">
-    <header>
-      <h2 class="title">Registrar Transferencia</h2>
-    </header>
-    <app-new-transfer-form></app-new-transfer-form>
-  </section>
-  <section role="region" id="transfers" class="border">
-    <header>
-      <h2 class="title">Transferencias</h2>
-    </header>
-    <div class="scroll">
-      <app-transfers></app-transfers>
-    </div>
-  </section>
-</main>
+<section>
+  <div class="px-5 pt-5 pb-6 bg-white rounded-lg drop-shadow-lg">
+    <h3 class="text-2xl text-gray-700 font-medium mb-3">Nueva transacción</h3>
+    <app-new-transaction-form />
+  </div>
+</section>
