--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,7 @@ form div.control {
 }
 
 form div.control-row {
-  @apply flex flex-row gap-1.5;
+  @apply flex items-center gap-1.5;
 }
 
 label {
