feat: create cash register card component and update button component to disabled management

--- a/src/app/modules/portal/pages/my-cash/my-cash.component.html
+++ b/src/app/modules/portal/pages/my-cash/my-cash.component.html
@@ -10,34 +10,11 @@
       </h2>
     </header>
     <section class="grid grid-cols-3 place-content-center gap-10 px-10">
-      <article
+      <app-cash-register-card
         *ngFor="let cashRegister of cashRegisters()"
-        class="card flex flex-col gap-5 items-center"
+        [cashRegister]="cashRegister"
       >
-        <header>
-          <h3 class="font-medium text-gray-700 text-2xl">
-            Caja {{ cashRegister.numeral }}
-          </h3>
-        </header>
-        <section>
-          <p class="text-gray-900 text-opacity-85 text-center">
-            {{ cashRegister.description }}
-          </p>
-        </section>
-        <section>
-          <span
-            class="text-lg font-medium"
-            [ngClass]="{
-              'text-green-700': cashRegister.status === 'AVAILABLE',
-              'text-red-700': cashRegister.status === 'OCCUPIED'
-            }"
-            >{{ cashRegister.status | cashRegisterStatus }}</span
-          >
-        </section>
-        <footer class="w-full">
-          <app-button type="button">Abrir caja</app-button>
-        </footer>
-      </article>
+      </app-cash-register-card>
     </section>
   </section>
 </ng-container>
