--- a/src/app/modules/shared/components/button/button.component.html
+++ b/src/app/modules/shared/components/button/button.component.html
@@ -1,7 +1,8 @@
 <button
-  class="w-full text-lg px-6 py-1.5 rounded-xl font-semibold focus:outline-none focus:ring-4"
+  class="w-full text-lg px-6 py-1.5 rounded-xl font-semibold focus:outline-none focus:ring-4 disabled:opacity-50"
   [ngClass]="getColor"
   [type]="type"
+  [disabled]="disabled"
 >
   <ng-content></ng-content>
 </button>
