update: modal logic and design, extract divider class

--- a/src/app/modules/admin/pages/users/users.component.html
+++ b/src/app/modules/admin/pages/users/users.component.html
@@ -14,7 +14,7 @@
           >Añadir usuario</app-button
         >
       </div>
-      <div class="h-px w-full bg-neutral-300"></div>
+      <div class="divider"></div>
       <app-filter-by-enabled></app-filter-by-enabled>
       <app-users-list></app-users-list>
     </div>
