--- a/src/app/modules/portal/pages/my-cash/my-cash.component.html
+++ b/src/app/modules/portal/pages/my-cash/my-cash.component.html
@@ -16,6 +16,7 @@
         (openCash)="openCash()"
       >
       </app-cash-register-card>
+      <app-modal modalTitle="Abrir caja"></app-modal>
     </section>
   </section>
 </ng-container>
